--- a/frontend/src/components/Spots/SpotsIndex.css
+++ b/frontend/src/components/Spots/SpotsIndex.css
@@ -1,6 +1,7 @@
-/* .body{
-    background: black
-} */
+:root {
+  --star-wars-yellow: #FFE81F;
+  --primary-font: 'Nunito', sans-serif;
+}
 
 .spots-container {
     display: flex;
@@ -25,17 +26,20 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border: 3px solid white;
     border-radius: 25px;
   }
 
   .spot-text-container {
     display: flex;
     flex-direction: column;
-    gap: 15px;
+    color: white;
+    font-size: 14px;
   }
 
   .spot-text-container h2 {
     font-size: 20px;
+    color: var(--star-wars-yellow)
   }
 
   .spot-location-rating-container {
