--- a/frontend/src/components/Spots/SpotDetailsPage.css
+++ b/frontend/src/components/Spots/SpotDetailsPage.css
@@ -1,117 +1,158 @@
+:root {
+  --star-wars-yellow: #FFE81F;
+  --star-wars-gray: #9ba0a8;
+  --star-wars-orange: #ffab00;
+  --star-wars-lightsaber-green: #2FF923;
+  --primary-font: 'Nunito', sans-serif;
+  --error-message-red: #FF0000;
+}
+
 .details-page-container {
-    margin-top: 25px;
-  }
+  margin-top: 25px;
+}
 
-  .details-page-image-container {
-    display: flex;
-    flex-direction: column;
-    margin: auto;
-    justify-content: center;
-    margin-top: 15px;
-  }
+.details-page-image-container {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  justify-content: center;
+  margin-top: 15px;
+}
 
-  .main-image-container {
-    width: 100%;
-    height: 300px;
-    display: flex;
-    gap: 8px;
-    margin-left: 70px;
-  }
+.spot-name-location {
+  display: flex;
+  flex-direction: column;
+  padding-left: 70px;
+}
 
-  .main-image-container > img {
-    width: 545px;
-    object-fit: cover;
-    border-radius: 10px 0px 0px 10px;
-  }
+#spot-header {
+  color: var(--star-wars-yellow);
+}
 
-  .sub-image-container {
-    width: 500px;
-    height: 100px;
-  }
+.spot-images-container {
+  display: grid;
+  grid-template-columns: 800px 400px 400px;
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-areas:
+    "big small small2"
+    "big small3 small4";
+  gap: 5px;
+  margin-bottom: 20px;
+  padding-left: 140px;
+}
 
-  .sub-image-container img {
-    width: 290px;
-    height: 296px;
-  }
+.big-image {
+  grid-area: big;
+  width: 100%;
+  height: 100%;
+  border: 2px solid white;
+  border-top-left-radius: 15px;
+  border-bottom-left-radius: 15px;
+}
 
-  .third-image-container {
-    width: 50%;
-  }
+.small-image {
+  width: 100%;
+  height: 100%;
+  border: 2px solid white;
+}
 
-  .third-image-container > img {
-    width: 270px;
-    height: 147px;
-  }
+.spot-info-container {
+  display: flex;
+  justify-content: space-around;
+  gap: 25px;
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
 
-  .spot-info-container {
-    display: flex;
-    justify-content: space-around;
-    gap: 25px;
-    margin-top: 40px;
-    margin-bottom: 40px;
-  }
+.owner-description-container {
+  width: 700px;
+  margin-left: 50px;
+}
 
-  .owner-description-container {
-    width: 700px;
-  }
+.info-box-container {
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+  gap: 15px;
+  margin-right: 80px;
+  border: 3px solid white;
+  border-radius: 20px;
+  padding: 25px;
+}
 
-  .info-box-container {
-    display: flex;
-    flex-direction: column;
-    width: 300px;
-    gap: 15px;
-  }
+.stay-info-container {
+  display: flex;
+  align-items: center;
+}
 
-  .stay-info-container {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-  }
+#spot-price {
+  justify-content: left;
+}
 
-  .btn-container {
-    width: 300px;
-    display: flex;
-    justify-content: center;
-  }
+/* #night-text {
 
-  .btn-container > button {
-    width: 280px;
-    border-radius: 5px;
-    border-width: 0;
-    padding: 10px 15px 10px 15px;
-    box-shadow: 2px 7px 2px 2px #888888;
-    cursor: pointer;
-  }
+} */
 
-  .line-break {
-    display: flex;
-    width: 1200px;
-    margin: auto;
-    border: 0.5px solid black;
-  }
+.btn-container {
+  width: 300px;
+  justify-content: center;
+}
 
-  .star-rating-review-summary {
-    display: flex;
-    align-items: center;
-    gap: 5px;
-  }
+.btn-container > button {
+  width: 280px;
+  height: 50px;
+  box-shadow: 2px 2px 2px var(--star-wars-gray);
+  background-color: var(--star-wars-yellow);
+  font: var(--primary-font);
+}
 
-  .review-summary-container {
-    display: flex;
-    align-items: center;
-    gap: 13px;
-    margin-bottom: 20px;
-  }
+.line-break {
+  display: flex;
+  width: 1200px;
+  margin: auto;
+  border: 0.5px solid black;
+}
 
-  .reviews-container {
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-  }
+.star-rating-review-summary {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
 
-  .summary-review-container {
-    margin-top: 40px;
-    display: flex;
-    flex-direction: column;
-    padding-left: 70px;
-  }
+.review-summary-container {
+  display: flex;
+  align-items: center;
+  gap: 13px;
+  margin-bottom: 20px;
+  font-size: 24px;
+  color: var(--star-wars-yellow);
+}
+
+.reviews-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  gap: 0px;
+}
+
+#review-button {
+  margin: auto;
+  width: 400px;
+  height: 50px;
+  box-shadow: 2px 2px 2px var(--star-wars-gray);
+  background-color: var(--star-wars-yellow);
+  font: var(--primary-font);
+}
+
+.summary-review-container {
+  margin-top: 40px;
+  display: flex;
+  flex-direction: column;
+  padding-left: 140px;
+}
+
+.center-dot {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
