Login as Demo User Added, Tooltips added on SpotsIndex page, Usermenu click in box click out box function fixed

--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -30,6 +30,31 @@
     height: 25px;
   }
 
+  #invalid-credentials {
+    font: var(--primary-font);
+    size: 12px;
+    color: red;
+  }
+
+  #invalid-password {
+    font: var(--primary-font);
+    size: 12px;
+    color: red;
+  }
+
+  #error-message {
+    font: var(--primary-font);
+    padding-top: 8px;
+    size: 12px;
+    color: red;
+  }
+
+  #invalid-credentials {
+    font: var(--primary-font);
+    size: 12px;
+    color: red;
+  }
+
   .password-modal {
     display: flex;
     flex-direction: column;
