--- a/frontend/src/components/Spots/SpotsIndex.css
+++ b/frontend/src/components/Spots/SpotsIndex.css
@@ -47,6 +47,10 @@
     justify-content: space-between;
   }
 
+  .spot-container:hover .tooltip .tooltiptext {
+    visibility: visible;
+  }
+
   .tooltip {
     position: relative;
     display: inline-block;
@@ -55,20 +59,15 @@
 
   .tooltip .tooltiptext {
     visibility: hidden;
-    width: 120px;
-    background-color: #51636d;
-    color: white;
-    text-align: center;
+    width: 250px;
+    background-color: transparent;
+    color: var(--star-wars-yellow);
     padding: 5px 0;
     border-radius: 6px;
     position: absolute;
-    z-index: 1;
-    width: 120px;
-    bottom: 100%;
-    left: 50%;
-    margin-left: -60px;
-  }
-
-  .tooltip:hover .tooltiptext {
-    visibility: visible;
+    z-index: 100;
+    bottom: 335px;;
+    left: 20px;
+    margin: 0 auto;
+    justify-content: center;
   }
