--- a/frontend/src/components/Spots/SpotsIndex.css
+++ b/frontend/src/components/Spots/SpotsIndex.css
@@ -71,3 +71,12 @@
     margin: 0 auto;
     justify-content: center;
   }
+
+  #update-button {
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+  }
+
