--- a/frontend/src/components/Spots/SpotsIndex.css
+++ b/frontend/src/components/Spots/SpotsIndex.css
@@ -8,75 +8,81 @@
     flex-wrap: wrap;
     margin-top: 50px;
     justify-content: space-around;
-  }
+}
 
-  .spot-container {
-    display: flex;
-    flex-direction: column;
-    width: 380px;
-    margin-bottom: 3rem;
-  }
+.spot-container {
+  display: flex;
+  flex-direction: column;
+  width: 380px;
+  margin-bottom: 3rem;
+}
 
-  .spot-image-container {
-    width: 370px;
-    height: 370px;
-  }
+.spot-container a:link,
+.spot-container a:visited {
+  text-decoration: none;
+  color: inherit;
+}
 
-  .spot-image-container img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border: 3px solid white;
-    border-radius: 25px;
-  }
 
-  .spot-text-container {
-    display: flex;
-    flex-direction: column;
-    color: white;
-    font-size: 14px;
-  }
+.spot-image-container {
+  width: 370px;
+  height: 370px;
+}
 
-  .spot-text-container h2 {
-    font-size: 20px;
-    color: var(--star-wars-yellow)
-  }
+.spot-image-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border: 3px solid white;
+  border-radius: 25px;
+}
 
-  .spot-location-rating-container {
-    display: flex;
-    justify-content: space-between;
-  }
+.spot-text-container {
+  display: flex;
+  flex-direction: column;
+  color: white;
+  font-size: 14px;
+}
 
-  .spot-container:hover .tooltip .tooltiptext {
-    visibility: visible;
-  }
+.spot-text-container h2 {
+  font-size: 20px;
+  color: var(--star-wars-yellow)
+}
 
-  .tooltip {
-    position: relative;
-    display: inline-block;
-    border-bottom: 1px dotted black;
-  }
+.spot-location-rating-container {
+  display: flex;
+  justify-content: space-between;
+}
 
-  .tooltip .tooltiptext {
-    visibility: hidden;
-    width: 250px;
-    background-color: transparent;
-    color: var(--star-wars-yellow);
-    padding: 5px 0;
-    border-radius: 6px;
-    position: absolute;
-    z-index: 100;
-    bottom: 335px;;
-    left: 20px;
-    margin: 0 auto;
-    justify-content: center;
-  }
+.spot-container:hover .tooltip .tooltiptext {
+  visibility: visible;
+}
 
-  #update-button {
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    cursor: pointer;
-  }
+.tooltip {
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black;
+}
 
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 250px;
+  background-color: transparent;
+  color: var(--star-wars-yellow);
+  padding: 5px 0;
+  border-radius: 6px;
+  position: absolute;
+  z-index: 100;
+  bottom: 335px;;
+  left: 20px;
+  margin: 0 auto;
+  justify-content: center;
+}
+
+#update-button {
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+}
