--- a/frontend/src/components/Spots/ManageSpotsIndexItem.css
+++ b/frontend/src/components/Spots/ManageSpotsIndexItem.css
@@ -1,4 +1,24 @@
 .button-container {
     display: flex;
     gap: 20px;
-  }
+}
+
+#update-button {
+  margin: auto;
+    width: 180px;
+    height: 50px;
+    box-shadow: 2px 2px 2px white;
+    background-color: var(--star-wars-yellow);
+    font: var(--primary-font);
+    color: black;
+}
+
+#delete-button {
+  margin: auto;
+  width: 180px;
+  height: 50px;
+  box-shadow: 2px 2px 2px white;
+  background-color: var(--star-wars-yellow);
+  font: var(--primary-font);
+  color: black;
+}
