Finalized fix for Create a Spot (made edits to make lat and long null values). Corrected Sign Up Form Modal errors (fixed validation errors, disabled Submit button, and CSS submit button).

--- a/frontend/src/components/SignupFormModal/SignupForm.css
+++ b/frontend/src/components/SignupFormModal/SignupForm.css
@@ -50,3 +50,14 @@
     height: 55px;
     width: 300px;
 }
+
+.signup-button:disabled {
+    background-color: #6c757d; /* Gray background color when disabled */
+    color: #ffffff; /* White text color when disabled */
+    border-color: #6c757d; /* Gray border color when disabled */
+    cursor: not-allowed; /* Change cursor to indicate disabled state */
+  }
+
+.validation-msg {
+    color: red;
+}
