--- a/frontend/src/components/Spots/SpotDetailsPage.css
+++ b/frontend/src/components/Spots/SpotDetailsPage.css
@@ -38,7 +38,7 @@
     "big small3 small4";
   gap: 5px;
   margin-bottom: 20px;
-  padding-left: 140px;
+  padding-left: 60px;
 }
 
 .big-image {
@@ -58,21 +58,21 @@
 
 .spot-info-container {
   display: flex;
-  justify-content: space-around;
-  gap: 25px;
+  justify-content: space-between;
   margin-top: 40px;
   margin-bottom: 40px;
+  margin-left: 50px;
 }
 
 .owner-description-container {
-  width: 700px;
+  width: 500px;
 }
 
 .info-box-container {
   display: flex;
   flex-direction: column;
-  width: 420px;
-  margin-right: 80px;
+  width: 440px;
+  margin-right: 600px;
   border: 3px solid white;
   border-radius: 20px;
 }
@@ -90,12 +90,11 @@
 }
 
 #night-text {
-  margin-right: 140px;
+  margin-right: 60px;
   color: var(--star-wars-lightsaber-green);
 }
 
 #star-rating-container {
-  margin-right: 45px;
   color: white;
   font-size: 18px;
 }
@@ -108,7 +107,7 @@
 }
 
 .btn-container > button {
-  width: 350px;
+  width: 370px;
   height: 40px;
   box-shadow: 2px 2px 2px var(--star-wars-gray);
   background-color: var(--star-wars-yellow);
@@ -151,6 +150,7 @@
   box-shadow: 2px 2px 2px var(--star-wars-gray);
   background-color: var(--star-wars-yellow);
   font: var(--primary-font);
+  margin-bottom: 100px;
 }
 
 .summary-review-container {
@@ -164,4 +164,5 @@
   display: flex;
   align-items: center;
   gap: 10px;
+  margin-right: 40px;
 }
